<resources>
    <string name="app_name">CowHandlerV2</string>

    <string name="create_new_entry">Create New Entry</string>
    <string name="View_All_Cows">View all cows</string>
    <string name="view_entry">View Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="delete_entry">Delete Entry</string>

    <string name="Search_by_CowID">Search by CowID</string>

    <string name="Edit_Cow_View">Edit Entry</string>
    <string name="Delete_Cow_View">Delete Entry</string>


    <string name="place_holder">placeholder</string>

    <string name="select_entry_type">Select Entry Type</string>
    <string name="cow">Cow</string>
    <string name="herd">Herd</string>
    <string name="paddock">Paddock</string>
    <string name="pasture">Pasture</string>

    <string name="input_cow_name">Input Cow Name</string>
    <string name="input_description">Input Description</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="input_species">Input Species</string>

    <string name="upload_txt">Upload</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

</resources>