<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CowEntry" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cow" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_cow_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_txt"
        app:icon="@android:drawable/stat_sys_upload" />

    <ImageView
        android:id="@+id/cowImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cow"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/addDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_description"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/genderInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/maleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/femaleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_female" />

    </RadioGroup>

    <TextView
        android:id="@+id/speciesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_species" />

</LinearLayout>