<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCow">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_entry_type" />

    <Button
        android:id="@+id/selectCowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cow" />

    <Button
        android:id="@+id/selectHerdBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/herd" />

    <Button
        android:id="@+id/selectPaddockBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paddock" />

    <Button
        android:id="@+id/selectPastureBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pasture" />
</LinearLayout>
