<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
/*
        android:layout_height="wrap_content"
        android:layout_weight=".8"
        android:background="@color/gray"

        tools:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/place_holder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/overviewBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:text="View All Cows"
        android:textColor="@color/sail_color"
        app:backgroundTint="@color/green_light"
        app:rippleColor="@color/sail_color"
        app:strokeColor="@color/sail_color"
        />


    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn1"
         android:text="@string/create_new_entry"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:textColor="@color/sail_color"
         android:layout_width="match_parent"
         app:backgroundTint="@color/green_light"
         android:layout_height="wrap_content"
         app:rippleColor="@color/sail_color"
         android:layout_weight=".05"
         app:strokeColor="@color/sail_color"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/displayEntryBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:text="@string/Search_by_CowID"
        android:textColor="@color/sail_color"
        app:backgroundTint="@color/green_light"
        app:rippleColor="@color/sail_color"
        app:strokeColor="@color/sail_color"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteEntryBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:text="@string/delete_entry"
        android:textColor="@color/black"
        app:backgroundTint="@color/orange_light"
        app:rippleColor="@color/sail_color"
        app:strokeColor="@color/orange_dark"
        />

</LinearLayout>
/*
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/credView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/create_new_entry"
                android:textColor="@color/sail_color"
                app:backgroundTint="@color/green_light"
                app:rippleColor="@color/sail_color"
                app:strokeColor="@color/sail_color"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/displayEntryBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/view_entry"
                android:textColor="@color/sail_color"
                app:backgroundTint="@color/green_light"
                app:rippleColor="@color/sail_color"
                app:strokeColor="@color/sail_color"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editEntryBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/edit_entry"
                android:textColor="@color/sail_color"
                app:backgroundTint="@color/green_light"
                app:rippleColor="@color/sail_color"
                app:strokeColor="@color/sail_color"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteEntryBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/delete_entry"
                android:textColor="@color/black"
                app:backgroundTint="@color/orange_light"
                app:rippleColor="@color/sail_color"
                app:strokeColor="@color/orange_dark"
                />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>

